--- a/yandexProducts/requirements.txt
+++ b/yandexProducts/requirements.txt
@@ -1,8 +1,4 @@
-asgiref==3.5.2
-certifi==2022.5.18.1
 Django==3.2.13
 djangorestframework==3.13.1
 psycopg2==2.9.3
-pytz==2022.1
-sqlparse==0.4.2
-typing_extensions
+gunicorn==20.1.0
