--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 DEBUG=0
 SECRET_KEY=django-insecure-*w*h!rcjjw$dpxpz51w#srsk=i^@=e7&f_d(q&-36e*4zt)n*7
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 regulations-1972.usr.yandex-academy.ru [::1]
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=hello_django_prod
 SQL_USER=hello_django
