--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -6,6 +6,7 @@ services:
       context: ./yandexProducts
       dockerfile: Dockerfile.prod
     command: gunicorn yandexProducts.wsgi:application --bind 0.0.0.0:8000
+    restart: always
     expose:
       - 8000
     env_file:
@@ -14,6 +15,7 @@ services:
       - db
 
   nginx:
+    restart: always
     build: ./nginx
     ports:
       - 80:80
@@ -21,6 +23,7 @@ services:
       - web
 
   db:
+    restart: always
     image: postgres:13.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
